--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-content">
-        <img src="https://i.imgur.com/nRacyKQ.png" alt="Claudinei" class="hero-logo">
+        <img src="https://i.imgur.com/Bh3pGyg.jpeg"alt="Claudinei" class="hero-logo">
         <h1>Claudinei</h1>
         <p>O Assistente de IA que Entende Você</p>
         <div class="hero-buttons">
